--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html lang="en">
+  <!--- ** Developed with love by usewebeffects studio  */ --->
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#fcdb5a" />
     <meta
       name="description"
-      content="DFarms"
+      content="Deka Farms"
     />
 
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
@@ -14,7 +15,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
 
-    <title>DFarms</title>
+    <title>Deka Farms</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
