--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,26 @@
     <meta name="theme-color" content="#fcdb5a" />
     <meta
       name="description"
-      content="Deka Farms"
+      content="Welcome to Deka Farms, where agriculture meets innovation! At Deka Farms, we pride ourselves on our commitment to sustainable farming practices and providing top- quality products to our customers. From our fertile fields to your table, we strive for excellence in every aspect of our operation"
     />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="%PUBLIC_URL%/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/favicon-16x16.png"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
 
     <title>Deka Farms</title>
